    name of the keyring.  This applies to the keyrings used by
    mod_webauth, mod_webkdc, and the wa_keyring utility and ensures that
    only one process attempts to update a keyring at the same time.  These
    functions continue to use atomic replacement on all writes, and no
    locks are used for reading the keyring.

    Use the authenticated identity returned by the WebKDC as the username
    for multifactor authentication in WebLogin rather than preserving what
    the user originally typed.  The WebKDC may have done Kerberos
    canonicalization and aname to localname mapping.

    The WebAuth Kerberos API now supports Kerberos password change via the
    remctl protocol, which is more robust than the kpasswd protocol when
    password changes can take some time.  This can be configured via the
    new webauth_krb5_change_config function.  The remote remctl server
    must provide a command and subcommand that takes a single argument,
    the new password, and changes the password for the authenticated
    principal that sent the command.

    The WebAuth::Krb5 change_password function now takes an optional args
    parameter that can be used to set the same configuration that can be
    set with webauth_krb5_change_config.

    WebLogin now supports using the remctl-based password change protocol
    instead of kpasswd.  This is controlled by setting
    $PASSWORD_CHANGE_HOST and several other variables in the WebLogin
    configuration.  See docs/weblogin-config for more information.

    Set the correct template variable when the code field is left blank on
    the WebLogin multifactor form.

    Map unknown realm and invalid principal errors during Kerberos
    authentication in mod_webkdc to WA_PEC_USER_REJECTED instead of a
    generic Kerberos error.  This will display a more accurate error
    message to the user of WebLogin instead of a generic internal error
    message.

    Correct a bug in the workaround for parsing of invalid XML from the