@@ -1514,7 +1514,7 @@ WebAuthLastUseUpdateInterval 10m
 
   <directivesynopsis>
     <name>WebAuthKeyring</name>
-    <description>Name of the file containing the webauth keyring
+    <description>Name of the file containing the WebAuth keyring
     </description>
     <syntax>WebAuthKeyring <em>path</em></syntax>
     <default>(none)</default>
@@ -1525,8 +1525,9 @@ WebAuthLastUseUpdateInterval 10m
 
     <usage>
       <p>
-        This is the name of the file containing the webauth keyring, which
-        is a file that contains the server's private AES key(s).
+        This is the name of the file containing the WebAuth keyring, which
+        is a file that contains the server's private AES key(s).  It must
+        be readable by the Apache user.
       </p>
       <p>
         The keyring file gets read once per child and cached for the
@@ -1563,10 +1564,26 @@ WebAuthKeyRing conf/webauth/keyring
     <usage>
       <p>
         This directive controls whether or not we auto-update the keyring
-        file.  This includes creating it if it doesn't exist, and
-        generating a new key before the old key expires, and periodically
-        garbage collecting old keys.  Note that auto updating only occurs
-        on server startup and restarts.
+        file.  This includes creating it if it doesn't exist, generating a
+        new key before the old key expires, and periodically
+        garbage-collecting old keys.  Updating only occurs on server
+        startup and restarts.
+      </p>
+
+      <p>
+        If auto-update is enabled, Apache must have write access to the
+        directory containing the keyring, since keyrings are updated by
+        writing out the new file to a separate name and then atomically
+        replacing the file.
+      </p>
+
+      <p>
+        Ownership (user and group) of the existing keyring file will be
+        preserved if possible without overwriting the existing file.
+        Permissions will also be preserved, with the exception that
+        permissions will not be copied to the new file if the old file was
+        group-readable or group-writable and setting the group ownership
+        failed.
       </p>
 
       <note>
@@ -1574,7 +1591,7 @@ WebAuthKeyRing conf/webauth/keyring
         <p>
           This directive should be turned off if multiple servers are
           sharing the same keyring file so the keyring file can be
-          manually updated.  That too will eventually be automated.
+          manually updated.
         </p>
       </note>
 
