@@ -702,11 +702,12 @@ WebKdcKerberosFactors p
     <usage>
       <p>
         This is the name of the file containing the WebKDC's keyring,
-        which stores the server's private AES keys.  The keyring file is
-        read on startup and cached for the duration of an Apache child
-        process, so if it is changed by an external process
-        (<code>wa_keyring</code>, for instance), Apache must be told to
-        reload configuration files in order to pick up the change.
+        which stores the server's private AES keys.  It must be readable
+        by the Apache user.  The keyring file is read on startup and
+        cached for the duration of an Apache child process, so if it is
+        changed by an external process (<code>wa_keyring</code>, for
+        instance), Apache must be told to reload configuration files in
+        order to pick up the change.
       </p>
       <p>
         If the path is not absolute, it will considered relative to
@@ -740,9 +741,25 @@ WebKdcKeyring conf/webkdc/keyring
       <p>
         This directive controls whether or not we auto-update the keyring
         file.  This includes creating it if it doesn't exist, generating a
-        new key before the old key expires, and periodically garbage
-        collecting old keys.  Note that auto updating only occurs on
-        server startup and restarts.
+        new key before the old key expires, and periodically
+        garbage-collecting old keys.  Updating only occurs on server
+        startup and restarts.
+      </p>
+
+      <p>
+        If auto-update is enabled, Apache must have write access to the
+        directory containing the keyring, since keyrings are updated by
+        writing out the new file to a separate name and then atomically
+        replacing the file.
+      </p>
+
+      <p>
+        Ownership (user and group) of the existing keyring file will be
+        preserved if possible without overwriting the existing file.
+        Permissions will also be preserved, with the exception that
+        permissions will not be copied to the new file if the old file was
+        group-readable or group-writable and setting the group ownership
+        failed.
       </p>
 
       <note>
