@@ -12,6 +12,8 @@
 #include <portable/apr.h>
 #include <portable/system.h>
 
+#include <errno.h>
+#include <sys/stat.h>
 #include <time.h>
 
 #include <lib/internal.h>
@@ -267,43 +269,90 @@ webauth_keyring_encode(struct webauth_context *ctx,
 /*
  * Write a keyring to the given file in encoded format.  Returns a WA_ERR
  * code.  This is the internal function that does no locking.
+ *
+ * We unfortunately have to use POSIX I/O functions since APR doesn't have
+ * equivalents of fchown or fchmod.
  */
 static int
 write_keyring(struct webauth_context *ctx, const struct webauth_keyring *ring,
               const char *path)
 {
-    apr_file_t *file = NULL;
+    struct stat st;
+    bool sync_perms = false;
+    bool group_set = false;
+    int fd = -1;
     size_t length;
+    ssize_t result;
     char *temp, *buf;
     apr_status_t code;
-    apr_int32_t flags;
+    mode_t mode;
     int s;
+
+    /* Get the ownership and mode of the existing file. */
+    if (stat(path, &st) == 0)
+        sync_perms = true;
+    else if (errno != ENOENT) {
+        s = WA_ERR_FILE_READ;
+        return wai_error_set_system(ctx, s, errno, "stat %s", path);
+    }
 
     /* Create a temporary file for the new copy of the keyring. */
     temp = apr_psprintf(ctx->pool, "%s.XXXXXX", path);
-    flags = (APR_FOPEN_CREATE | APR_FOPEN_WRITE | APR_FOPEN_EXCL
-             | APR_FOPEN_NOCLEANUP);
-    code = apr_file_mktemp(&file, temp, flags, ctx->pool);
-    if (code != APR_SUCCESS) {
+    fd = mkstemp(temp);
+    if (fd < 0) {
         s = WA_ERR_FILE_OPENWRITE;
-        wai_error_set_apr(ctx, s, code, "temporary keyring %s", temp);
-        goto done;
+        wai_error_set_system(ctx, s, errno, "temporary keyring %s", temp);
+        return s;
+    }
+
+    /*
+     * Set ownership and permissions.  Ignore failures of fchown with EPERM,
+     * as this probably indicates that we're rewriting a keyring owned by
+     * someone else and we're not root.  Assume that whoever created such a
+     * situation knew what they were doing and has appropriate permissions.
+     *
+     * Change the group first, since it's the most likely to succeed, and then
+     * the user.
+     */
+    if (sync_perms) {
+        if (fchown(fd, -1, st.st_gid) == 0)
+            group_set = true;
+        else if (errno != EPERM) {
+            s = WA_ERR_FILE_WRITE;
+            wai_error_set_system(ctx, s, errno, "group of %s", temp);
+            goto done;
+        }
+        if (fchown(fd, st.st_uid, -1) < 0 && errno != EPERM) {
+            s = WA_ERR_FILE_WRITE;
+            wai_error_set_system(ctx, s, errno, "group of %s", temp);
+            goto done;
+        }
+
+        /*
+         * Don't sync permissions if the include group read or write and we
+         * weren't able to set the group.
+         */
+        mode = st.st_mode & (S_IRWXU | S_IRWXG | S_IRWXO);
+        if (group_set || !(mode & (S_IRGRP | S_IWGRP)))
+            if (fchmod(fd, mode) < 0) {
+                s = WA_ERR_FILE_WRITE;
+                wai_error_set_system(ctx, s, errno, "mode of %s", temp);
+                goto done;
+            }
     }
 
     /* Encode and write out the file. */
     s = webauth_keyring_encode(ctx, ring, &buf, &length);
     if (s != WA_ERR_NONE)
         goto done;
-    code = apr_file_write_full(file, buf, length, NULL);
-    if (code == APR_SUCCESS) {
-        code = apr_file_close(file);
-        file = NULL;
-    }
-    if (code != APR_SUCCESS) {
+    result = write(fd, buf, length);
+    if (result < 0 || (size_t) result != length) {
         s = WA_ERR_FILE_WRITE;
-        wai_error_set_apr(ctx, s, code, "temporary keyring %s", temp);
+        wai_error_set_system(ctx, s, errno, "temporary keyring %s", temp);
         goto done;
     }
+    close(fd);
+    fd = -1;
 
     /* Rename the new file over the old path. */
     code = apr_file_rename(temp, path, ctx->pool);
@@ -315,8 +364,8 @@ write_keyring(struct webauth_context *ctx, const struct webauth_keyring *ring,
     s = WA_ERR_NONE;
 
 done:
-    if (file != NULL) {
-        apr_file_close(file);
+    if (fd >= 0) {
+        close(fd);
         apr_file_remove(temp, ctx->pool);
     }
     return s;
