@@ -14,6 +14,7 @@
 
 #include <fcntl.h>
 #include <time.h>
+#include <sys/stat.h>
 
 #include <tests/tap/basic.h>
 #include <tests/tap/string.h>
@@ -36,8 +37,9 @@ main(void)
     size_t i, size;
     time_t now;
     enum webauth_kau_status kau;
+    struct stat st;
 
-    plan(96);
+    plan(98);
 
     if (webauth_context_init(&ctx, NULL) != WA_ERR_NONE)
         bail("cannot initialize WebAuth context");
@@ -88,6 +90,8 @@ main(void)
     basprintf(&keyring, "%s/webauth_keyring", tmpdir);
     basprintf(&lock, "%s.lock", keyring);
     s = webauth_keyring_write(ctx, ring, keyring);
+    if (s != WA_ERR_NONE)
+        diag("error message: %s", webauth_error_message(ctx, s));
     is_int(WA_ERR_NONE, s, "Writing the keyring to a file succeeds");
     s = webauth_keyring_read(ctx, keyring, &ring2);
     if (s != WA_ERR_NONE)
@@ -258,6 +262,16 @@ main(void)
     is_int(entry->valid_after, entry2->valid_after, "... and valid matches");
     ok(memcmp(entry->key->data, entry2->key->data, entry->key->length) == 0,
        "... and key data matches");
+
+    /* Change the mode of the keyring and ensure it is preserved on write. */
+    if (chmod(keyring, S_IRUSR | S_IWUSR | S_IRGRP | S_IWGRP) < 0)
+        sysbail("cannot chmod %s", keyring);
+    s = webauth_keyring_write(ctx, ring, keyring);
+    is_int(WA_ERR_NONE, s, "Overwrote keyring with changed permissions");
+    if (stat(keyring, &st) < 0)
+        sysbail("cannot stat %s", keyring);
+    is_int(S_IFREG | S_IRUSR | S_IWUSR | S_IRGRP | S_IWGRP, st.st_mode,
+           "...and writing the keyring preserves permissions");
 
     /* Clean up. */
     unlink(keyring);
